--- a/src/main/resources/templates/addchannel.vm
+++ b/src/main/resources/templates/addchannel.vm
@@ -22,31 +22,21 @@
                     <!-- general form elements -->
                     <div class="box box-primary">
                         <div class="box-header">
-                            <h3 class="box-title">添加渠道标签</h3>
+                            <h3 class="box-title">添加渠道框</h3>
                         </div>
                         <!-- /.box-header -->
                         <!-- form start -->
                         <form role="form">
                             <div class="box-body">
                                 <div class="form-group">
-                                    <label for="exampleInputEmail1">渠道框名称</label>
-                                    <input type="text" class="form-control" id="channelName"
+                                    <label for="exampleInputEmail1">地区名称</label>
+                                    <input type="text" class="form-control" id="districtName"
                                            placeholder="" value=""/>
                                 </div>
                                 <div class="form-group">
-                                    <label for="exampleInputPassword1">标签名称</label>
-                                    <input type="text" class="form-control" id="tagName"
-                                           placeholder="标签名称"/>
-                                </div>
-                                <div class="form-group">
-                                    <label for="exampleInputPassword1">标签描述</label>
-                                    <input type="text" class="form-control" id="tagDesc"
-                                           placeholder="标签描述"/>
-                                </div>
-                                <div class="form-group">
-                                    <label for="exampleInputPassword1">标签链接</label>
-                                    <input type="text" class="form-control" id="tagLink"
-                                           placeholder="标签链接"/>
+                                    <label for="exampleInputPassword1">渠道框名称</label>
+                                    <input type="text" class="form-control" id="channelName"
+                                           placeholder="渠道框名称"/>
                                 </div>
                             </div>
                             <!-- /.box-body -->
@@ -79,27 +69,25 @@
     $(document).ready(function(){
 
          var pathname = window.location.pathname;
-         var channelName = decodeURI(pathname.split('/')[4]);
-         $('#channelName').val(channelName);
-         $('#channelName').attr("disabled", true);
+         var districtName = decodeURI(pathname.split('/')[4]);
+         $('#districtName').val(districtName);
+         $('#districtName').attr("disabled", true);
 
 
               $("#previous").click(function(){
-                                  location.href="/bin/add/tag/";
+                                  location.href="/bin/add/channel/";
               });
 
          $("#save").click(function(){
 
+            var districtName = $("#districtName").val();
             var channelName = $("#channelName").val();
-            var tagName = $("#tagName").val();
-            var tagLink = $("#tagLink").val();
-            var tagDesc = $("#tagDesc").val();
+
 
             var myObj = {};
+            myObj["districtName"] = districtName;
             myObj["channelName"] = channelName;
-            myObj["tagName"] = tagName;
-            myObj["tagLink"] = tagLink;
-            myObj["tagDesc"] = tagDesc;
+
 
             var data = JSON.stringify(myObj);
 
@@ -110,7 +98,7 @@
                         'Content-Type': 'application/json'
                     },
                         type: "POST",
-                        url: "/bin/add/tag/new",
+                        url: "/bin/add/channel/new",
                         data: data,
                         contentType: "application/json; charset=utf-8",
                         dataType: "json",
