[xjwan] As to tag save functionality, we use jquery ajax post request.

--- a/src/main/resources/templates/success.vm
+++ b/src/main/resources/templates/success.vm
@@ -41,5 +41,7 @@
     <li>$channeltag.tname | $channeltag.description | $channeltag.link | $channeltag.click_rate</li>
   #end
 </ul>
+
+$msg
 </body>
 </html>
