--- a/src/main/resources/templates/addtag.vm
+++ b/src/main/resources/templates/addtag.vm
@@ -105,18 +105,24 @@
 
 
                 $.ajax({
-                headers: {
-                        'Accept': 'application/json',
-                        'Content-Type': 'application/json'
-                    },
+                        headers: {
+                            Accept : "text/plain; charset=utf-8",
+                            "Content-Type": "text/plain; charset=utf-8"
+                        },
                         type: "POST",
                         url: "/bin/add/tag/new",
                         data: data,
                         contentType: "application/json; charset=utf-8",
-                        dataType: "json",
-                        success: function(data){alert("success: "+data);},
-                        failure: function(errMsg) {
-                            alert("error: "+errMsg);
+
+                        dataType: "text",
+
+
+                        success: function(msg){
+                         alert("success:"+msg);
+                        },
+
+                        failure: function(msg) {
+                            alert("error: "+msg);
                         }
                   });
          });
