[gschen] add market vm.

--- a/src/main/resources/templates/leftmenu.vm
+++ b/src/main/resources/templates/leftmenu.vm
@@ -31,8 +31,8 @@
                             </a>
                         </li>
                         <li>
-                            <a href="pages/widgets.html">
-                                <i class="fa fa-th"></i> <span>Widgets</span> <small class="badge pull-right bg-green">new</small>
+                            <a href="/market/">
+                                <i class="fa fa-th"></i> <span>巨智网络营销平台</span>
                             </a>
                         </li>
                                            </ul>
