[gschen]  change district controller to support different district.

--- a/src/main/resources/templates/market.vm
+++ b/src/main/resources/templates/market.vm
@@ -136,7 +136,7 @@
                 </h3>
 
                 <p>
-                    243729024
+                     添加标签
                 </p>
             </div>
             <div class="icon">
