--- a/src/main/resources/templates/market.vm
+++ b/src/main/resources/templates/market.vm
@@ -49,7 +49,7 @@
             <div class="icon">
                 <i class="ion "></i>
             </div>
-            <a target="_black" href="/market/view/shanghai" class="small-box-footer">
+            <a target="_black" href="/market/view/$district.dname" class="small-box-footer">
                 More info <i class="fa fa-arrow-circle-right"></i>
             </a>
         </div>
