--- a/src/main/resources/templates/success.vm
+++ b/src/main/resources/templates/success.vm
@@ -1,54 +1,88 @@
+#include("htmlheader.vm")
+<body class="skin-blue">
+<!-- header logo: style can be found in header.less -->
+<header class="header">
+    <a href="index.html" class="logo">
+        <!-- Add the class icon to your logo image or logo icon to add the margining -->
+        巨智网络营销统一平台
+    </a>
+    #include("top.vm")
+</header>
+<div class="wrapper row-offcanvas row-offcanvas-left">
+    #include("leftmenu.vm")
 
-<html>
-<head>
-<meta charset="UTF-8">
-<title>test</title>
-</head>
-<body>
-#include ("header.vm")
+    <!-- Right side column. Contains the navbar and content of the page -->
+    <aside class="right-side">
 
-<ul>
-  #foreach( $t in $test )
-    <li>$t.name</li>
-  #end
-</ul>
-<hr/>
+        <!-- Content Header (Page header) -->
+        <section class="content-header">
+            <h1>
+                提示信息
+            </h1>
+            <ol class="breadcrumb">
+                <li><a href="#"><i class="fa fa-dashboard"></i> Home</a></li>
+                <li><a href="#">Examples</a></li>
+                <li class="active">Blank page</li>
+            </ol>
+        </section>
+
+        <div class="pad margin no-print">
+            <div class="alert alert-info" style="margin-bottom: 0!important;">
+                <i class="fa fa-info"></i>
+                <b>Note:</b> $msg
+            </div>
+        </div>
 
 
-<ul>
-  #foreach( $channel in $channelList )
-    <li>$channel.cid | $channel.cname</li>
-  #end
-</ul>
+    </aside>
+    <!-- /.right-side -->
 
-<hr/>
-<ul>
-  #foreach( $districtchannelrel in $districtchannelrelList )
-    <li>$districtchannelrel.did | $districtchannelrel.cid</li>
-  #end
-</ul>
 
-<hr/>
-<ul>
-  #foreach( $tagrelation in $tagrelationList )
-    <li>$tagrelation.cid | $tagrelation.tid</li>
-  #end
-</ul>
+</div>
+<!-- ./wrapper -->
 
-<hr/>
-<ul>
-  #foreach( $channeltag in $channeltagList )
-    <li>$channeltag.tname | $channeltag.description | $channeltag.link | $channeltag.click_rate</li>
-  #end
-</ul>
+<!-- add new calendar event modal -->
 
-$msg
 
-<hr/>
-<ul>
-  #foreach( $district in $districtList )
-    <li>$district.dname | $district.description</li>
-  #end
-</ul>
+<!-- jQuery 2.0.2 -->
+<script src="http://ajax.googleapis.com/ajax/libs/jquery/2.0.2/jquery.min.js"></script>
+<!-- jQuery UI 1.10.3 -->
+<script src="/resources/js/jquery-ui-1.10.3.min.js" type="text/javascript"></script>
+<!-- Bootstrap -->
+<script src="/resources/js/bootstrap.min.js" type="text/javascript"></script>
+<!-- Morris.js charts -->
+<script src="//cdnjs.cloudflare.com/ajax/libs/raphael/2.1.0/raphael-min.js"></script>
+<script src="/resources/js/plugins/morris/morris.min.js" type="text/javascript"></script>
+<!-- Sparkline -->
+<script src="/resources/js/plugins/sparkline/jquery.sparkline.min.js" type="text/javascript"></script>
+<!-- jvectormap -->
+<script src="/resources/js/plugins/jvectormap/jquery-jvectormap-1.2.2.min.js" type="text/javascript"></script>
+<script src="/resources/js/plugins/jvectormap/jquery-jvectormap-world-mill-en.js" type="text/javascript"></script>
+<!-- fullCalendar -->
+<script src="/resources/js/plugins/fullcalendar/fullcalendar.min.js" type="text/javascript"></script>
+<!-- jQuery Knob Chart -->
+<script src="/resources/js/plugins/jqueryKnob/jquery.knob.js" type="text/javascript"></script>
+<!-- daterangepicker -->
+<script src="/resources/js/plugins/daterangepicker/daterangepicker.js" type="text/javascript"></script>
+<!-- Bootstrap WYSIHTML5 -->
+<script src="/resources/js/plugins/bootstrap-wysihtml5/bootstrap3-wysihtml5.all.min.js" type="text/javascript"></script>
+<!-- iCheck -->
+<script src="/resources/js/plugins/iCheck/icheck.min.js" type="text/javascript"></script>
+
+<!-- AdminLTE App -->
+<script src="/resources/js/AdminLTE/app.js" type="text/javascript"></script>
+
+<!-- AdminLTE dashboard demo (This is only for demo purposes) -->
+<script src="/resources/js/AdminLTE/dashboard.js" type="text/javascript"></script>
+
 </body>
-</html>
+#include("htmlfooter.vm")
+
+</aside><!-- /.right-side -->
+
+
+</div><!-- ./wrapper -->
+
+
+</body>
+#include("htmlfooter.vm")
