--- a/src/main/resources/templates/htmlheader.vm
+++ b/src/main/resources/templates/htmlheader.vm
@@ -2,7 +2,7 @@
 <html>
     <head>
         <meta charset="UTF-8">
-        <title>AdminLTE | Dashboard</title>
+        <title> 巨智综合服务平台</title>
         <meta content='width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no' name='viewport'>
         <!-- bootstrap 3.0.2 -->
         <link href="/resources/css/bootstrap.min.css" rel="stylesheet" type="text/css" />
@@ -29,4 +29,40 @@
           <script src="https://oss.maxcdn.com/libs/html5shiv/3.7.0/html5shiv.js"></script>
           <script src="https://oss.maxcdn.com/libs/respond.js/1.3.0/respond.min.js"></script>
         <![endif]-->
+
+
+         <!-- add new calendar event modal -->
+
+
+                <!-- jQuery 2.0.2 -->
+                <script src="http://ajax.googleapis.com/ajax/libs/jquery/2.0.2/jquery.min.js"></script>
+                <!-- jQuery UI 1.10.3 -->
+                <script src="/resources/js/jquery-ui-1.10.3.min.js" type="text/javascript"></script>
+                <!-- Bootstrap -->
+                <script src="/resources/js/bootstrap.min.js" type="text/javascript"></script>
+                <!-- Morris.js charts -->
+                <script src="//cdnjs.cloudflare.com/ajax/libs/raphael/2.1.0/raphael-min.js"></script>
+                <script src="/resources/js/plugins/morris/morris.min.js" type="text/javascript"></script>
+                <!-- Sparkline -->
+                <script src="/resources/js/plugins/sparkline/jquery.sparkline.min.js" type="text/javascript"></script>
+                <!-- jvectormap -->
+                <script src="/resources/js/plugins/jvectormap/jquery-jvectormap-1.2.2.min.js" type="text/javascript"></script>
+                <script src="/resources/js/plugins/jvectormap/jquery-jvectormap-world-mill-en.js" type="text/javascript"></script>
+                <!-- fullCalendar -->
+                <script src="/resources/js/plugins/fullcalendar/fullcalendar.min.js" type="text/javascript"></script>
+                <!-- jQuery Knob Chart -->
+                <script src="/resources/js/plugins/jqueryKnob/jquery.knob.js" type="text/javascript"></script>
+                <!-- daterangepicker -->
+                <script src="/resources/js/plugins/daterangepicker/daterangepicker.js" type="text/javascript"></script>
+                <!-- Bootstrap WYSIHTML5 -->
+                <script src="/resources/js/plugins/bootstrap-wysihtml5/bootstrap3-wysihtml5.all.min.js" type="text/javascript"></script>
+                <!-- iCheck -->
+                <script src="/resources/js/plugins/iCheck/icheck.min.js" type="text/javascript"></script>
+
+                <!-- AdminLTE App -->
+                <script src="/resources/js/AdminLTE/app.js" type="text/javascript"></script>
+
+                <!-- AdminLTE dashboard demo (This is only for demo purposes) -->
+                <script src="/resources/js/AdminLTE/dashboard.js" type="text/javascript"></script>
+
     </head>
