--- a/src/main/resources/templates/adddistrict.vm
+++ b/src/main/resources/templates/adddistrict.vm
@@ -40,8 +40,8 @@
                                 </div>
                             </div>
                             <!-- /.box-body -->
-                            <div class="box-footer">
-                                <input id="save" value="保存" class="btn btn-primary" style="width:100px">
+                            <div class="box-footer" align="right">
+                                 <input id="next" value="下一步" class="btn btn-primary" style="width:100px">
                             </div>
                         </form>
                     </div>
@@ -65,7 +65,8 @@
 <script type="text/javascript">
     $(document).ready(function(){
 
-         $("#save").click(function(){
+
+         $("#next").click(function(){
 
             var districtName = $("#districtName").val();
             var districtDesc = $("#districtDesc").val();
@@ -87,7 +88,7 @@
                         contentType: "application/json; charset=utf-8",
                         dataType: "text",
                         success: function(msg){
-                            alert("success: "+msg);
+                            location.href="/market/add/district/"+districtName;
                         },
                         failure: function(msg) {
                             alert("error: "+msg);
