--- a/src/main/resources/templates/market.vm
+++ b/src/main/resources/templates/market.vm
@@ -195,7 +195,7 @@
             <div class="icon">
                 <i class="ion "></i>
             </div>
-            <a href="/market/add/tag" class="small-box-footer">
+            <a href="/market/delete/tag" class="small-box-footer">
                 <i class="fa fa-arrow-circle-right"></i>
             </a>
         </div>
