--- a/src/main/resources/templates/market.vm
+++ b/src/main/resources/templates/market.vm
@@ -174,7 +174,7 @@
             <div class="icon">
                 <i class="ion "></i>
             </div>
-            <a href="/market/add/channel" class="small-box-footer">
+            <a href="/market/delete/channel" class="small-box-footer">
                 <i class="fa fa-arrow-circle-right"></i>
             </a>
         </div>
