--- a/src/main/resources/templates/market.vm
+++ b/src/main/resources/templates/market.vm
@@ -36,7 +36,7 @@
 #foreach($district in $districtList)
     <div class="col-lg-3 col-xs-6">
         <!-- small box -->
-        <div class="small-box bg-red">
+        <div class="small-box bg-olive">
             <div class="inner">
                 <h3>
                     $district.dname
@@ -139,7 +139,7 @@
 <div class="row">
     <div class="col-lg-3 col-xs-6">
         <!-- small box -->
-        <div class="small-box bg-yellow">
+        <div class="small-box bg-red">
             <div class="inner">
                 <h3>
                     删除地区
@@ -160,7 +160,7 @@
     <!-- ./col -->
     <div class="col-lg-3 col-xs-6">
         <!-- small box -->
-        <div class="small-box bg-yellow">
+        <div class="small-box bg-red">
             <div class="inner">
                 <h3>
                     删除渠道
@@ -182,7 +182,7 @@
     <!-- ./col -->
     <div class="col-lg-3 col-xs-6">
         <!-- small box -->
-        <div class="small-box bg-yellow">
+        <div class="small-box bg-red">
             <div class="inner">
                 <h3>
                     删除标签
