[xjwan] add delete channel on market pages.

--- a/src/main/resources/templates/addchannel.vm
+++ b/src/main/resources/templates/addchannel.vm
@@ -81,7 +81,7 @@
          $("#save").click(function(){
 
             var districtName = $("#districtName").val();
-            var channelName = $("#channelName").val();
+            var channelName = districtName+$("#channelName").val();
 
 
             var myObj = {};
