[gschen] clean all unused class!

--- a/src/main/resources/templates/addchannel.vm
+++ b/src/main/resources/templates/addchannel.vm
@@ -74,9 +74,9 @@
          $('#districtName').attr("disabled", true);
 
 
-              $("#previous").click(function(){
-                    location.href="/market/add/channel/";
-              });
+            $("#previous").click(function(){
+                                  location.href="/market/add/channel?dname="+districtName;
+                            });
 
          $("#save").click(function(){
 
