--- a/src/main/resources/templates/adddistrict.vm
+++ b/src/main/resources/templates/adddistrict.vm
@@ -88,7 +88,7 @@
                         contentType: "application/json; charset=utf-8",
                         dataType: "text",
                         success: function(msg){
-                            location.href="/market/add/district/"+districtName;
+                            location.href="/market/add/channel/"+districtName;
                         },
                         failure: function(msg) {
                             alert("error: "+msg);
