[gschen] redirect to market .

--- a/src/main/resources/templates/addchannel.vm
+++ b/src/main/resources/templates/addchannel.vm
@@ -104,6 +104,7 @@
                         dataType: "text",
                         success: function(msg){
                             alert("success: "+msg);
+                            $('#channelName').val('');
                         },
                         failure: function(msg) {
                             alert("error: "+msg);
