--- a/src/main/resources/templates/addtag.vm
+++ b/src/main/resources/templates/addtag.vm
@@ -119,6 +119,9 @@
 
                         success: function(msg){
                          alert("success:"+msg);
+                         $('#tagName').val('')
+                         $('#tagDesc').val('')
+                         $('#tagLink').val('')
                         },
 
                         failure: function(msg) {
